k8s/wt-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wt-web-deployment
  namespace: wt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wt-web
  template:
    metadata:
      labels:
        app: wt-web
    spec:
      containers:
      - name: wt-web-container
        image: localhost:32000/wt-books:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
