k8s/wt-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wt-postgres-service
  namespace: wt
spec:
  selector:
    app: wt-postgres
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30016
