k8s/wt-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wt-web-service
  namespace: wt
  labels:
    app: wt-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: wt-web
