k8s/wt-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wt-web-ingress
  namespace: wt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - books.hackstop.lt
    secretName: lets-encrypt-wt-books-web-key2
  rules:
    - host: books.hackstop.lt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wt-web-service
                port:
                  number: 80
